--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
 language: python
 python:
-- '3.6'
+  - '3.6'
 install:
-- pip install -r requirements.txt
+  - pip install pipenv
+  - pipenv install
 script:
-- echo test
+  - pytest
 deploy:
   provider: heroku
   api_key:
