--- a/Pipfile
+++ b/Pipfile
@@ -17,7 +17,10 @@ django = "==2.0"
 gunicorn = "==19.7.1"
 "psycopg2" = "*"
 whitenoise = "==3.3.1"
+djangorestframework = "*"
 
 
 [dev-packages]
 
+pytest = "*"
+pytest-django = "*"
