ading django setup command

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ env:
 install:
   - pip install pipenv
   - pipenv install
+  - django-admin.py shell --settings=django_heroku.settings
 script:
   - pytest
 deploy:
