--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ install:
   - pip install pipenv
   - pipenv install
 script:
-  - python django_heroku.setup_travis.py
+  - python django_heroku/setup_travis.py
   - pytest
 deploy:
   provider: heroku
