--- a/Pipfile
+++ b/Pipfile
@@ -18,6 +18,8 @@ gunicorn = "==19.7.1"
 "psycopg2" = "*"
 whitenoise = "==3.3.1"
 djangorestframework = "*"
+pytest = "*"
+pytest-django = "*"
 
 
 [dev-packages]
